[gd_scene load_steps=2 format=3 uid="uid://c40y61p55vxxa"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_dt5ot"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_dt5ot")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 120)

[node name="SpawnPosition_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 220)

[node name="SpawnPosition_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 320)

[node name="SpawnPosition_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 420)

[node name="SpawnPosition_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 520)

[node name="SpawnPosition_06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 620)

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="PathEnemyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="EnemyTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PathEnemyTimer" to="." method="_on_path_enemy_timer_timeout"]
